--- a/public/css/default.css
+++ b/public/css/default.css
@@ -38,11 +38,11 @@ e. Others
 /* ------------------------------------------------------------------ */
 
 html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h2, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
 del, dfn, em, img, ins, kbd, q, samp,
 small, strong, sub, sup, var,
-b, i,
+b, i,h1,h3
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -57,7 +57,15 @@ time, mark, audio, video {
    vertical-align: baseline;
    background: transparent;
 }
-
+/* h3,h1 {
+   margin: 0;
+   padding: 10;
+   border: 0;
+   outline: 0;
+   font-size: 100%;
+   vertical-align: baseline;
+   background: rgba(0, 0, 0, 0.404);
+} */
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
    display: block;
