--- a/public/css/default.css
+++ b/public/css/default.css
@@ -189,7 +189,7 @@ p.lead {
 /* for 'em' and 'strong' tags, font-size and line-height should be same with
 the body tag due to rendering problems in some browsers */
 em { font: 15px/30px 'opensans-italic', sans-serif; }
-strong, b { font: 14px/25px 'opensans-bold', arial; color:#b88a56; }
+strong, b { font: 14px/25px 'opensans-bold', arial; color:#CF995B; }
 small { font-size: 11px; line-height: inherit; }
 
 /*	Blockquotes */
