--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -146,7 +146,7 @@ header .scrolldown a:hover { color: #0762f9; }
 ul#nav {
    min-height: 48px;
    width: auto;
-
+   background-color: rgba(12, 12, 12, 0.823);
    /* center align the menu */
    text-align: center;
 }
@@ -266,9 +266,9 @@ ul#nav li.current a { color: #CF995B; }
    border-bottom: 1px solid #E8E8E8;
 }
 #resume .info {
-   font: 16px/24px 'librebaskerville-italic', serif;
+   font: 18px/26px 'librebaskerville', serif;
    color: #d3d3d3;
-   margin-bottom: 18px;
+   margin-bottom: 10px;
    margin-top: 9px;
 }
 #resume .info span {
@@ -276,7 +276,7 @@ ul#nav li.current a { color: #CF995B; }
    margin-left: 5px;
 }
 #resume .tech{
-   margin-bottom: 0px;
+   margin-bottom: 5px;
    color: #d3d3d3;
    font: 16px;
 }
