--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -987,7 +987,20 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 .project-btn{
    background-color: #1abc9c !important;
+
+}
+.linkedin-btn{
+   border-radius: 10px;
+}
+.linkedin-btn:hover{
+   background-color: #ffffff !important;
+   color: black;
 }
 .github-btn{
-   background-color: #34495e !important;
+   background-color: #494a4a !important;
+   border-radius: 10px;
+}
+.github-btn:hover{
+   background-color: #ffffff !important;
+   color: black;
 }
