--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -257,7 +257,36 @@ ul#nav li.current a {
    overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #a8c8fc; }
+/* #resume a, #resume a:visited  { 
+   background: linear-gradient(40deg, rgb(238, 80, 69) 30%,rgb(134, 110, 238) 70%, rgb(238, 80, 69) 30%);
+   background-size: 200% auto;
+   
+   color: #000;
+   background-clip: text;
+   text-fill-color: transparent;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   animation: shine 3s linear infinite;  } */
+
+   @-webkit-keyframes hue {
+      from {
+        -webkit-filter: hue-rotate(0deg);
+      }
+      to {
+        -webkit-filter: hue-rotate(-360deg);
+      }
+    }
+    
+   #resume a, #resume a:visited  { 
+      font-weight:  100;
+      letter-spacing: 2px;
+      text-align: center;
+      color: #f35626;
+      background-image: -webkit-linear-gradient(100deg, #dc49fa, #fe3a44);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-animation: hue 6s infinite linear;  }
+      
 #resume a:hover, #resume a:focus { color: #eef0f5; }
 
 #resume h1 {
@@ -282,14 +311,14 @@ ul#nav li.current a {
    border-bottom: 1px solid #E8E8E8;
 }
 #resume .info {
-   font: 18px/26px 'librebaskerville', serif;
+   font: 16px/20px 'librebaskerville', serif;
    color: #d3d3d3;
    margin-bottom: 10px;
    margin-top: 9px;
 }
 #resume .info span {
-   margin-right: 5px;
-   margin-left: 5px;
+   margin-right: 2px;
+   margin-left: 2px;
 }
 #resume .tech{
    margin-bottom: 5px;
@@ -297,7 +326,7 @@ ul#nav li.current a {
    font: 16px;
 }
 #resume .date {
-   font: 15px/24px 'opensans-regular', sans-serif;
+   font: 14px/16px 'librebaskerville', serif;
    margin-top: 6px;
 }
 
