--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -48,8 +48,8 @@ body[data-theme="dark"] {
          background:  #050e29;
       }
       .card {
-         background: white;
-         color: balck;
+         background: rgba(255, 255, 255, 0.994);
+         color: black;
          font-weight: 500;
          border-radius: 10px;
       }
@@ -76,40 +76,39 @@ body[data-theme="dark"] {
       }
 
       .experience-badge {
-         background: #050e29 !important;
+         background: #021c47 !important;
          color: white;
          font-size: 14px;
          font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
 
       .main-badge {
-         background: #050e29 !important;
+         background: #0877d8 !important;
          font-size: 14px;
          font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
 
       .vertical-timeline-element-date {
          color: white;
-         font-size: 11px;
+         font-size: 12px;
       }
 
       .vertical-timeline-element-icon {
-         background: #050e29 !important;
+         background: #0057a3 !important;
       }
-      @media only screen and (max-width: 1169px) { 
+      @media only screen and (max-width: 1069px) { 
          .vertical-timeline-element-date {
-            color: black;
+            color: #040404 !important;;
          }
       }
    }
 
    .modal-inside .modal-content {
-      background: #fcfcfc;
-      color: white;
-      border-radius: 10px;
+      background: rgba(255, 255, 255, 0.926);
+      color: rgba(255, 255, 255, 0.316);
    }
 
    .close-icon {
-      color: white;
+      color: rgba(255, 255, 255, 0.926);
    }
 }
